--- a/src/styles.css
+++ b/src/styles.css
@@ -134,8 +134,7 @@ a {
 
 .contact-images {
     width: 35px;
-    margin-right: 10px;
-    margin-top: 20px;
+    margin: 10px;
     vertical-align:middle;
     
 }
