Refactor about me section in index.html and styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -145,3 +145,10 @@ a {
 .contact-text {
     display: inline;
 }
+
+.about-me-text {
+    display:inline;
+}
+#about-me-img {
+    display: inline;
+}
