Refactor about me section in index.html and styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -147,8 +147,9 @@ a {
 }
 
 .about-me-text {
-    display:inline;
+    margin-left: 20px;
 }
-#about-me-img {
-    display: inline;
+
+.about-me {
+    display:flex;
 }
