--- a/src/styles.css
+++ b/src/styles.css
@@ -65,15 +65,31 @@ nav ul li a {
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
+    grid-template-columns: repeat(4, 1fr);
+    
     gap: 20px;
 }
 
 .project {
     background-color: #eaeaea;
-    padding: 20px;
+    padding: 0px;
     border-radius: 8px;
     text-align: center;
+}
+
+.project p,h3,h4{
+    padding-left:20px;
+    padding-right:20px;
+}
+
+.project-picture{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+
 }
 
 .skills-list {
