--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,15 @@ nav ul li a {
 .projects-grid {
     display: grid;
     /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    
+    gap: 20px;
+}
+
+.projects-grid-2 {
+    display: grid;
+    /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
+    grid-template-columns: repeat(2, 1fr);
     
     gap: 20px;
 }
@@ -90,6 +98,24 @@ nav ul li a {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 
+}
+
+.project-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    
+}
+.project-section button{
+    height: 50px;
+    font-family:Arial, sans-serif;
+    font-size: medium;
+    font-weight:bold;
+    background-color: #336;
+    color: #fff;
+    border: 1;
+    padding: 10px;
 }
 
 .skills-list {
